@@ -7,11 +7,11 @@
 #
 
 # Common part
-attr global logfile /tmp/fhem-%Y-%m.log
-attr global statefile /tmp/fhem.save   # where to save the state of the devices
+attr global logfile /tmp/fhem/fhem-%Y-%m.log
+attr global statefile /tmp/fhem/fhem.save   # where to save the state of the devices
 attr global verbose 3                  # "normal" verbosity (min 1, max 5)
 attr global port 7072                  # our TCP/IP port (localhost only)
-attr global modpath .                  # where our FHEM directory is
+attr global modpath /tmp/fhem/fhem                  # where our FHEM directory is
 
 define FHZ FHZ /dev/tts/USB0 # the serial port of an FHZ 1000 PC
 
